--- a/functions/config.json
+++ b/functions/config.json
@@ -1,19 +1,19 @@
 {
-	"app_name": "Your App Name",
-	"app_description": "Your App Description Here",
-	"app_identifier": "com.something.app",
+	"app_name": "GRÚAS VIP",
+	"app_description": "Servicio de Gruas 24/7",
+	"app_identifier": "com.gruaservice.app",
 	"ios_app_version": "1.0.0",
 	"android_app_version": "100",
-	"firebaseProjectId": "XXXXXXXXXXXXXXX",
+	"firebaseProjectId": "gruas-service",
 	"googleApiKeys": {
-		"ios": "XXXXXXXXXXXXXXX",
-		"android": "XXXXXXXXXXXXXXX",
-		"web": "XXXXXXXXXXXXXXX",
-		"server": "XXXXXXXXXXXXXXX"
+		"ios": "AIzaSyBW13y61WOelXyCaQyDZEUHjtFvx_87zW8",
+		"android": "AIzaSyAoAxIPGW-l8Yf8hUWCD-WmpiY3M-QyvRA",
+		"web": "AIzaSyAZfOZxcWwCRuVY9swajFPoeU-ZsyJPsAA",
+		"server": "AIzaSyB9530y0nlJSaUFPh0BYvLssp7Q9aHAR5w"
 	},
-	"expo_owner": "XXXXXXXXXXXXXXX",
-	"expo_slug": "XXXXXXXXXXXXXXX",
-	"expo_project_id": "XXXXXXXXXXXXXXX",
-	"admin_email": "XXXXXXXXXXXXXXX",
-	"purchase_code": "XXXXXXXXXXXXXXX"
+	"expo_owner": "devbbriones",
+	"expo_slug": "gruas-service",
+	"expo_project_id": "9dda0545-5904-4854-bf18-ab8f0c60160b",
+	"admin_email": "piagruas@gmail.com",
+	"purchase_code": "cbe72c9d-2f99-4d47-b069-3bac31ca199c"
 }
