--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exicubeapps",
+  "name": "gruasvip",
   "version": "4.7.1",
   "description": "Exicube App Solutions",
   "scripts": {
